# ai-python-recipe-shoplist-crawler

./: .gitignore
ai-agentless-recipe-shoplist/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements_freezen.txt  start.sh  test_coles_api.py  test_html_extractor.py  test_parallel_utils.py  test_storage_manager_runner.py  test_store_selector.py
ai-agentless-recipe-shoplist/app/: main.py  models.py
ai-agentless-recipe-shoplist/app/api/: v1.py
ai-agentless-recipe-shoplist/app/client/: ai_chat_client.py
ai-agentless-recipe-shoplist/app/config/: __init__.py  logging_config.py  pydantic_config.py  store_config.py
ai-agentless-recipe-shoplist/app/ia_provider/: base_provider.py
ai-agentless-recipe-shoplist/app/scrapers/: __init__.py  coles_rapidapi.py  html_scraper.py  scraper_factory.py
ai-agentless-recipe-shoplist/app/services/: __init__.py  ai_service.py
ai-agentless-recipe-shoplist/app/static/: app.js  style.css
ai-agentless-recipe-shoplist/app/storage/: db_manager.py  storage_manager.py
ai-agentless-recipe-shoplist/app/utils/: __init__.py  ai_helpers.py  parallel_utils.py
ai-agentless-recipe-shoplist/doco/: troubleshooting.md
ai-agentless-recipe-shoplist/docs/: configuration.md  parallel_execution_guide.md  storage-system.md  troubleshooting.md
ai-agentless-recipe-shoplist/stub_responses/bill_generation/: carbonara_shopping_bill.json
ai-agentless-recipe-shoplist/stub_responses/recipe_analysis/: spaghetti_carbonara.json
ai-agentless-recipe-shoplist/tests/: __init__.py
ai-agentless-recipe-shoplist/tests/unit/: test_logging.py  test_storage_manager.py  test_store_config.py  test_tenacity_retry.py
ai-agentless-recipe-shoplist/tests/verification/: test_content_saving.py  test_ingredient_units.py  test_units_fix_simple.py  test_web_fetcher_file_cache.py
(+86 files in other folders)
