[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-recipe-shoplist"
version = "0.1.0"
description = "AI-powered recipe ingredient crawler with grocery store price optimization (Python 3.11+)"
authors = [{name = "Fernando Ibanez", email = "fernando@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.2",
    "pydantic>=2.0.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.1.1",
    "aiofiles>=23.2.1",
    "pillow>=10.4.0",
    "reportlab>=4.2.2",
    "openai>=1.50.0",
    "azure-ai-inference>=1.0.0b4",
    "langchain>=0.1.0",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true